--- a/src/MinimarketPro/login.form
+++ b/src/MinimarketPro/login.form
@@ -6,9 +6,14 @@
       <xy x="20" y="20" width="641" height="400"/>
     </constraints>
     <properties>
-      <background color="-13392182"/>
+      <background color="-15329770"/>
+      <enabled value="false"/>
+      <font size="14" style="1"/>
       <visible value="true"/>
     </properties>
+    <clientProperties>
+      <html.disable class="java.lang.Boolean" value="true"/>
+    </clientProperties>
     <border type="none"/>
     <children>
       <component id="5a6e2" class="javax.swing.JButton" binding="loginButton">
@@ -40,33 +45,29 @@
         </constraints>
         <properties>
           <font name="Roboto Light" size="20" style="1"/>
+          <foreground color="-2828"/>
           <icon value="iconologin.png"/>
           <requestFocusEnabled value="false"/>
           <text value="  MINIMARKET PRO"/>
         </properties>
       </component>
-      <component id="f6472" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font size="18" style="1"/>
-          <text value="INICIO DE SESION"/>
-        </properties>
-      </component>
       <component id="e8458" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="2" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="14" style="1"/>
+          <foreground color="-2828"/>
           <text value="Usuario"/>
         </properties>
       </component>
       <component id="4e536" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="14" style="1"/>
+          <foreground color="-2828"/>
           <text value="Contraseña"/>
         </properties>
       </component>
@@ -88,6 +89,7 @@
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-15329770"/>
           <icon value="user.png"/>
           <text value=""/>
         </properties>
@@ -101,6 +103,19 @@
         <properties>
           <font name="Roboto Light" size="14" style="1"/>
         </properties>
+      </component>
+      <component id="f6472" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="18" style="1"/>
+          <foreground color="-2828"/>
+          <text value="INICIO DE SESION"/>
+        </properties>
+        <clientProperties>
+          <html.disable class="java.lang.Boolean" value="false"/>
+        </clientProperties>
       </component>
     </children>
   </grid>
