--- a/src/MinimarketPro/menu.form
+++ b/src/MinimarketPro/menu.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MinimarketPro.menu">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="557" height="400"/>
+      <xy x="20" y="20" width="686" height="400"/>
     </constraints>
     <properties>
       <background color="-16777216"/>
@@ -12,7 +12,7 @@
     <children>
       <tabbedpane id="6316d" binding="tabbedPane1" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -21,7 +21,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="b221c" default-binding="true" layout-manager="GridLayoutManager" row-count="8" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b221c" default-binding="true" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Administrar Usuarios"/>
@@ -36,6 +36,8 @@
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-1773569"/>
                   <text value="Buscar"/>
                 </properties>
               </component>
@@ -52,7 +54,10 @@
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font size="12" style="1"/>
+                  <foreground color="-16777216"/>
                   <text value="Buscar Usuario por ID"/>
+                  <verifyInputWhenFocusTarget value="false"/>
                 </properties>
               </component>
               <component id="2d346" class="javax.swing.JLabel">
@@ -68,6 +73,8 @@
                   <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Eliminar"/>
                 </properties>
               </component>
@@ -76,6 +83,8 @@
                   <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Actualizar datos"/>
                 </properties>
               </component>
@@ -84,6 +93,9 @@
                   <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <borderPainted value="false"/>
+                  <foreground color="-2828"/>
                   <text value="Crear un nuevo Usuario"/>
                 </properties>
               </component>
@@ -97,21 +109,16 @@
                   <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <component id="fedc1" class="javax.swing.JButton" binding="regresarButton" default-binding="true">
-                <constraints>
-                  <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Cerrar Sesion"/>
-                </properties>
-              </component>
               <component id="296e" class="javax.swing.JTextField" binding="usuario">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <focusCycleRoot value="false"/>
+                  <horizontalAlignment value="2"/>
+                </properties>
               </component>
               <component id="aeec5" class="javax.swing.JTextField" binding="password">
                 <constraints>
@@ -126,6 +133,8 @@
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font size="12" style="1"/>
+                  <foreground color="-16777216"/>
                   <text value="Usuario"/>
                 </properties>
               </component>
@@ -134,6 +143,8 @@
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font size="12" style="1"/>
+                  <foreground color="-16777216"/>
                   <text value="Contraseña"/>
                 </properties>
               </component>
@@ -185,14 +196,17 @@
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Buscar"/>
                 </properties>
               </component>
               <component id="91f8c" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="ID Producto"/>
                 </properties>
               </component>
@@ -222,33 +236,37 @@
               </component>
               <component id="275dd" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="Nombre"/>
                 </properties>
               </component>
               <component id="511fd" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="Descripcion"/>
                 </properties>
               </component>
               <component id="9fe09" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="Precio"/>
                 </properties>
               </component>
               <component id="49e90" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="5" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <foreground color="-16777216"/>
                   <text value="Stock"/>
                 </properties>
               </component>
@@ -265,6 +283,8 @@
                   <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Actualizar Producto"/>
                 </properties>
               </component>
@@ -273,6 +293,8 @@
                   <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Eliminar Producto"/>
                 </properties>
               </component>
@@ -281,6 +303,8 @@
                   <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Agregar Producto"/>
                 </properties>
               </component>
@@ -289,6 +313,8 @@
                   <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Limpiar"/>
                 </properties>
               </component>
@@ -297,6 +323,8 @@
                   <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2828"/>
                   <text value="Cerrar Sesion"/>
                 </properties>
               </component>
@@ -306,7 +334,7 @@
       </tabbedpane>
       <component id="fd0b2" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="11" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Roboto Light" size="20" style="1"/>
@@ -321,6 +349,20 @@
         <properties>
           <icon value="iconologin.png"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="fedc1" class="javax.swing.JButton" binding="regresarButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="5" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-16776705"/>
+          <borderPainted value="true"/>
+          <contentAreaFilled value="false"/>
+          <focusCycleRoot value="false"/>
+          <font size="14" style="1"/>
+          <foreground color="-2828"/>
+          <text value="Log Out"/>
         </properties>
       </component>
     </children>
