--- a/src/MinimarketPro/menu_cajero.form
+++ b/src/MinimarketPro/menu_cajero.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="434"/>
     </constraints>
     <properties>
       <background color="-16777216"/>
@@ -21,7 +21,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="2683e" default-binding="true" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="2683e" default-binding="true" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Ventas"/>
@@ -182,6 +182,16 @@
                   <background color="-16542464"/>
                   <foreground color="-2306"/>
                   <text value="Agregar al Carrito"/>
+                </properties>
+              </component>
+              <component id="d6c2d" class="javax.swing.JButton" binding="cancelarCompraButton" default-binding="true">
+                <constraints>
+                  <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-16542464"/>
+                  <foreground color="-2306"/>
+                  <text value="Cancelar Compra"/>
                 </properties>
               </component>
             </children>
